--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js",
-    "server": "nodemon index.js",
-    "serve": "nodemon index.js"
+		"start": "nodemon index.js",
+		"dev": "nodemon index.js",
+		"server": "nodemon index.js",
+		"serve": "nodemon index.js"
 	},
 	"author": "mohammad hossein ghofran",
 	"license": "ISC",
@@ -22,6 +22,7 @@
 		"mongoose": "^8.5.1",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.14",
 		"nodemon": "^3.1.4",
 		"path": "^0.12.7"
 	}
